--- a/assets/100years.css
+++ b/assets/100years.css
@@ -121,6 +121,12 @@ button {
   overflow-y: hidden;
 }
 
+#arrows {
+  max-width: 100%;
+  max-height: 100%;
+  grid-row: span 5;
+}
+
 .row {
   display: grid;
   grid-template-rows: 30% 80%;
@@ -282,12 +288,7 @@ button {
 
 #currentPrice {
   color: #ffffff;
-  font-size: 24px;
-  margin: 10%;
-  left: 50%;
-  display: grid;
-  grid-column: 1;
-  width: 100%;
+  font-size: 16px;
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
@@ -350,79 +351,32 @@ button {
   color: #040568;
 }
 
+#commitButton {
+  display: block;
+  width: auto;
+  padding: 10px 20px;
+  background-color: #446ef8;
+  color: #fff;
+  border: none;
+  border-radius: 20px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  /* margin-left: 50px; */
+}
+
 #actionDropdown {
   width: 100%;
   height: 60%;
   font-size: 16px;
 }
 
-.row.bar {
-  width: 100%;
-  height: 60%;
+.bar {
+  /* width: 100%;
+  height: 60%; */
   font-size: 16px;
-}
+  /* background: white; */
 
-/* The switch - the box around the slider
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-} */
-
-/* Hide default HTML checkbox
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-} */
-
-/* The slider
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked+.slider {
-  background-color: #040568;
-}
-
-input:focus+.slider {
-  box-shadow: 0 0 1px #040568;
-}
-
-input:checked+.slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
 }
 
 #playPauseButton,
