--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -84,6 +84,26 @@ header h1 {
   padding: 20px;
   overflow-y: hidden;
 }
+.education-selection-container,
+.education-container,
+.job-container {
+  display: flex;
+  grid-column: 2;
+  grid-row: 3;
+  background-color: #040568;
+  color: white;
+  border-radius: 10px;
+  margin: 20px;
+  max-width: 85%;
+  gap: 20px;
+  padding: 20px;
+  overflow-y: hidden;
+}
+
+.education-container,
+.job-container{
+  display: none;
+}
 
 .summary-tile {
   align-self: flex-start;
@@ -175,4 +195,111 @@ header h1 {
 .multiplier {
   margin-top: 10px;
   background-color: #040568;
+}
+
+/* Dropdown Button */
+.dropbtn {
+  background-color: white;
+  color: #040568;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+/* The search field */
+#myInput {
+  box-sizing: border-box;
+  background-position: 14px 12px;
+  background-repeat: no-repeat;
+  font-size: 16px;
+  padding: 14px 20px 12px 45px;
+  width: 230px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  height: 50px;
+  z-index: 2;
+
+}
+
+/* The search field when it gets focus/clicked on */
+#myInput:focus {
+  outline: 3px solid #ddd;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f6f6f6;
+  min-width: 230px;
+  border: 1px solid #ddd;
+  z-index: 1;
+  max-height: 500px;
+  overflow-y: auto;
+}
+
+/* Links inside the dropdown */
+.dropdown-content button {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #f1f1f1
+}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {
+  display: block;
+}
+
+/* Styles for the pop-up */
+.popup-success,
+.popup-unsuccess {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-success-content,
+.popup-unsuccess-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+#result {
+  visibility: hidden; 
+  opacity: 0;
+  position: absolute;
 }
