--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -84,12 +84,12 @@ header h1 {
   transition: background-color 0.3s ease;
   margin-left: 50px;
 }
+
 #requestRaise:hover {
   background-color: #446ef8;
 }
 
 .investment-summary {
-  display: flex;
   grid-column: 2;
   grid-row: 2;
   background-color: #040568;
@@ -100,25 +100,41 @@ header h1 {
   gap: 20px;
   padding: 20px;
   overflow-y: hidden;
+  display: flex;
+  /* Add this to make it a flex container */
+  flex-direction: column;
+  /* Stack elements vertically */
 }
+
+#summaryTile {
+  max-width: 100%;
+  max-height: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+
 .education-selection-container,
 .education-container,
 .job-container {
-  display: flex;
   grid-column: 2;
   grid-row: 3;
   background-color: #040568;
   color: white;
   border-radius: 10px;
   margin: 20px;
+  margin-top: 10px;
   max-width: 85%;
   gap: 20px;
   padding: 20px;
   overflow-y: hidden;
 }
 
+
+
 .education-container,
-.job-container{
+.job-container {
   display: none;
 }
 
@@ -225,6 +241,7 @@ header h1 {
   border-radius: 10px;
   cursor: pointer;
 }
+
 /* The search field */
 #myInput {
   box-sizing: border-box;
@@ -305,7 +322,7 @@ header h1 {
   padding: 20px;
   border-radius: 5px;
   text-align: center;
-  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
 .close {
@@ -317,7 +334,7 @@ header h1 {
 }
 
 #result {
-  visibility: hidden; 
+  visibility: hidden;
   opacity: 0;
   position: absolute;
 }
