--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -85,13 +85,20 @@ header h1 {
   margin-left: 50px;
 }
 
+.right-side {
+  /* overflow-y: auto; */
+  grid-column: 2;
+  grid-row: 2 / span 3;
+  max-height: 100%;
+  margin: 20px;
+}
+
 #requestRaise:hover {
   background-color: #446ef8;
 }
 
 .investment-summary {
-  grid-column: 2;
-  grid-row: 2;
+  grid-row: 1;
   background-color: #040568;
   color: white;
   border-radius: 10px;
@@ -106,13 +113,13 @@ header h1 {
   /* Stack elements vertically */
 }
 
-#summaryTile {
+/* #summary-tile {
   max-width: 100%;
   max-height: 100%;
   flex: 1;
   display: flex;
   flex-direction: column;
-}
+} */
 
 
 .education-selection-container,
