--- a/assets/100years.css
+++ b/assets/100years.css
@@ -54,7 +54,6 @@ header h1 {
   cursor: pointer;
   transition: background-color 0.3s ease;
   margin-left: 50px;
-  margin-right: 30px;
 }
 
 #home {
@@ -69,11 +68,13 @@ header h1 {
   cursor: pointer;
   transition: background-color 0.3s ease;
   margin-left: 50px;
+  margin-right: 70px;
 }
 
 /* Hover effect for buttons */
 #home:hover,
-#portfolio:hover {
+#portfolio:hover,
+.ffbutton:hover {
   background-color: #0e12db;
 }
 
@@ -109,6 +110,7 @@ button {
   padding: 20px;
   overflow-y: hidden;
 }
+
 .chartContainer {
   display: flex;
   grid-column: 2;
@@ -421,14 +423,6 @@ button {
   padding: 10px 20px;
 }
 
-.bar {
-  /* width: 100%;
-  height: 60%; */
-  font-size: 16px;
-  /* background: white; */
-
-}
-
 #playPauseButton,
 #ffDropbtn {
   background: none;
@@ -438,4 +432,12 @@ button {
   margin: 5px;
   padding-right: 15px;
   color: #040568;
+}
+
+.bar {
+  /* width: 100%;
+  height: 60%; */
+  font-size: 16px;
+  /* background: white; */
+
 }
