--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -36,7 +36,8 @@ header h1 {
 }
 
 /* Style the buttons */
-#home {
+
+#hundyyears {
   display: block;
   width: auto;
   padding: 10px 20px;
@@ -50,7 +51,7 @@ header h1 {
   margin-left: 50px;
 }
 
-#hundyyears {
+#home {
   display: block;
   width: auto;
   padding: 10px 20px;
@@ -67,7 +68,8 @@ header h1 {
 
 /* Hover effect for buttons */
 #hundyyears:hover,
-#home:hover {
+#home:hover,
+.ffbutton:hover {
   background-color: #0e12db;
 }
 
@@ -138,9 +140,9 @@ header h1 {
 
 }
 
-.education-selection-container > *,
-.education-container > *,
-.job-container > * {
+.education-selection-container>*,
+.education-container>*,
+.job-container>* {
   margin: 16px 0px;
 }
 
@@ -351,4 +353,77 @@ header h1 {
   visibility: hidden;
   opacity: 0;
   position: absolute;
+}
+
+
+.ffbutton {
+  border: none;
+  background: none;
+  font-family: 'Evil', sans-serif;
+  color: white;
+  /* margin: 0px 3px; */
+}
+
+.ffbutton:hover {
+  cursor: pointer;
+}
+
+.ff-dropdown-container {
+  position: relative;
+  display: inline-block;
+  background-color: #040568;
+  border-radius: 30px;
+  padding: 10px 20px;
+}
+
+#playPauseButton,
+#ffDropbtn {
+  background: none;
+  border-radius: 0;
+  border: none;
+  font-size: 20px;
+  margin: 5px;
+  padding-right: 15px;
+  color: #040568;
+}
+
+.show {
+  display: block;
+}
+
+.ff-dropdown-container {
+  position: relative;
+  display: inline-block;
+}
+
+#ffDropbtn {
+  z-index: 100;
+}
+
+.ff-dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: transparent;
+  min-width: 160px;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  margin-left: 10px;
+}
+
+.ff-dropdown-content {
+  padding: 6px 20px;
+}
+
+.ff-dropdown-content button {
+  border: none;
+  border-radius: 5%;
+  background-color: #368af7;
+  font-family: 'Evil', sans-serif;
+  color: #040568;
+  margin: 0 10px;
+}
+
+.ff-dropdown-container:hover .ff-dropdown-content {
+  display: flex;
 }
