feat: no longer refresh page when buying stocks

--- a/assets/100years.css
+++ b/assets/100years.css
@@ -378,9 +378,9 @@ button {
   color: #040568;
 }
 
-#commitButton button:active {
+#commitButton:active {
   background: #040568;
-  color: #040568;
+  color: #446ef8;
 }
 
 #commitButton {
